feat(prisma-calendar): edit note content in event modals
